fixed spacing on headers

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html {
 .caption {
   position: absolute;
   left: 0;
-  top: 30%;
+  top: 45%;
   width: 100%;
   text-align: center;
   color: #000;
